pass port as argument

--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   remote_docker_host:
     description: Remote Docker host ie (user@host)
     required: true
+  ssh_port:
+    description: Port for SSH if not 22
+    required: true
   ssh_public_key:
     description: Remote Docker SSH public key
     required: true
